# aineko-dream

./: .env_example  LATEST_RESPONSE.md  README.md  mermaid.html  pyproject.toml
aineko_dream/: __init__.py  config.py  nodes.py  test.ipynb
aineko_dream/api/: main.py
aineko_dream/api/internals/: kafka.py
aineko_dream/prompts/: documentation  guidelines  instructions
conf/: cohere.yml  gpt3.yml  gpt4.yml  pipeline.yml
tests/: test_nodes.py
