[tool.poetry]
name = "aineko_dream"
version = "0.0.0"
description = "Generative templating for the Aineko framework."
authors = ["ricardo@convexlabs.xyz"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
aineko = "^0.1.2"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.1"
pytest-cov = "^4.1.0"

[tool.poetry.scripts]
aineko = "aineko.__main__:_cli"
