[tool.poetry]
name = "aineko-dream"
version = "0.0.0"
description = "Generative templating for the Aineko framework."
authors = ["Aineko Engineering <engineering@aineko.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
aineko = { path = "/Users/convexricardo/git/aineko-dev/aineko", develop=true}
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
aiokafka = "^0.8.1"
openai = "^0.28.1"
python-dotenv = "^1.0.0"
pygithub = "^1.59.1"
bandit = "^1.7.5"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.1"
pytest-cov = "^4.1.0"

[tool.poetry.scripts]
aineko = "aineko.__main__:_cli"
